--- a/src/app/cabecera/cabecera.component.html
+++ b/src/app/cabecera/cabecera.component.html
@@ -1,3 +1,3 @@
 <div class="alert alert-primary">
-    <h1 class="text-center">Formularios en Angular</h1>
+    <h1 class="text-center">Formularios Template-Driven en Angular</h1>
 </div>
